# yapytr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
pytr/: __main__.py  account.py  alarms.py  api.py  details.py  dl.py  doc_download.py  main.py  portfolio.py  timeline.py  tr_api.py  utils.py
yapytr/: __main__.py  account.py  alarms.py  details.py  doc_download.py  main.py  portfolio.py  timeline.py  tr_api.py  utils.py
