[project]
name = "pytr"
version = "0.2.0"
authors = [
    {name = "ExploracuriousAlex", email = "abc@def.com"},
]
description = "Use TradeRepublic in terminal"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Trade Republic"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
    "coloredlogs",
    "ecdsa",
    "packaging",
    "pathvalidate",
    "pygments",
    "requests_futures",
    "shtab",
    "websockets>=10.1"
]

[project.scripts]
pytr = "pytr.__main__:main"